--- a/machine_learning_debt.Rmd
+++ b/machine_learning_debt.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Machine Learning Debt"
 subtitle: "Journal Club"
-author: "David Dai"
+# author: "David Dai"
 date: "2019/03/07"
 output:
   xaringan::moon_reader:
